<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Road Signs</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_place_here">Place here</string>
    <string name="action_place">Show places</string>
    <string name="action_download_map">Maps</string>
    <string name="action_download_navigation_data">Download navigation data</string>
    <string name="title_activity_points">Points of interest</string>
    <string name="title_activity_details">Details</string>
    <string name="action_track">Follow location</string>
    <string name="filter">Filter</string>
    <string name="warn_no_providers">No location providers enabled</string>
    <string name="configure_providers">Configure</string>
    <string name="dont_show_again">Don\'t show this dialog again</string>
    <string name="pref_navigation_data">Navigation data</string>
    <string name="warn_no_network">Network not available</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stop">Stop</string>
    <string name="no_networks_offline">No network available. Switching to offline mode</string>
    <string name="download_interrupted">Download interrupted</string>
    <string name="error_downloading">Error downloading</string>
    <string name="download_finished">Download finished</string>
    <string name="navigation_data">Navigation data</string>
    <string name="offline_map">Offline map</string>
    <string name="use">Use</string>
    <string name="download">Download</string>
    <string name="update_availabe">update available</string>
    <string name="action_about">About</string>
    <string name="about_text">    Application uses map data from http://openstreetmap.org\n\n
    This application is a part of grant KA322 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland\n\n
    Tiles Courtesy of MapQuest: http://www.mapquest.com</string>
    <string name="configure_use_offline_map">Use offline map</string>
    <string name="warn_no_navigation_data">No navigation data</string>
    <string name="configure_navigation_data">Download navigation data</string>
    <string name="pref_storage_path_title">Data storage path</string>
    <string name="storage_path_internal">Internal storage</string>
    <string name="storage_path_external">External storage</string>
    <string name="storage_path_sd_card">SD card</string>
    <string name="action_use">Use</string>
    <string name="action_delete">Delete</string>
    <string name="action_download">Download</string>
    <string name="pref_use_offline_map">Use offline map</string>
    <string name="pref_use_offline_map_sumon">Enabled</string>
    <string name="pref_use_offline_map_sumoff">Disabled</string>
    <string name="pref_autoregion">Auto-detect region</string>
    <string name="pref_mapmatching">Map matching</string>
    <string name="str_updating_points">Updating points…</string>
    <string name="str_cant_delete_active_content">Can\'t delete active content</string>

    <plurals name="distance_meters">
        <item quantity="one">%d m.</item>
        <item quantity="other">%d m.</item>
    </plurals>
    <plurals name="distance_kilometers">
        <item quantity="one">%.1f km.</item>
        <item quantity="other">%.1f km.</item>
    </plurals>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_starting_download">Starting download…</string>
    <string name="close_path">Close path</string>
    <string name="str_loading_items">Loading points</string>
    <string name="real_location">Show real location</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="str_details_show_on_map">On map</string>
    <string name="str_details_show_path">Show path</string>
    <string name="str_details_details">Details</string>
    <string name="str_details_wikipedia">Wikipedia</string>
    <string name="warn_update_ready">Navigation data updated</string>
    <string name="str_search_wikipedia">Search on Wikipedia</string>
    <string name="refresh_title">Refresh</string>
    <string name="str_gets_server_updated">Gets server updated</string>
    <string name="str_incorrect_server">Incorrect server, try reset it in settings</string>

</resources>
