<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/show_place_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/str_details_show_on_map"
                android:drawableTop="@drawable/ic_action_place"
                android:layout_margin="4dp"
                android:textColor="#777777"
                />

            <Button
                android:id="@+id/search_place_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/str_details_show_path"
                android:drawableTop="@drawable/ic_action_directions"
                android:layout_margin="4dp"
                android:textColor="#777777"

                />

            <Button
                android:id="@+id/browse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/str_details_details"
                android:drawableTop="@drawable/ic_action_web_site"
                android:visibility="gone"
                android:layout_margin="4dp"
                android:textColor="#777777"

                />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/str_details_wikipedia"
                android:drawableTop="@drawable/wikipediaw"
                android:layout_margin="4dp"
                android:textColor="#777777"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/details_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <ListView
            android:visibility="gone"
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>